style.css
/*
Theme Name: VectorGen
Theme URI:
Author: Robert Cole, Aliyah Northington, Lauren Rowland
Description: Custom theme for VectorGen
Version: 0.1
License: Open
Text Domain: vectorgen
*/

@import url('https://fonts.googleapis.com/css?family=Lato:700|Open+Sans:400,400i');
@import url("stylesheets/normalize.css");
@import url("stylesheets/skeleton.css");

/* Colors:
Blue: #174A7F
Light Gray: #c7d6e0
Teal: #40B2B1
Charcoal: #383E4B
White: #F4FAFE
*/

body{
  
  background-color: #F4FAFE;
 
  color: #383E4B;
}

h1, h2, h3, h4, h5{
  font-family: 'Lato', sans-serif;
  color: #174A7F;
}

p{
  font-family: 'Open Sans', sans-serif;
  color: #383E4B;
}

a{
  font-family: 'Open Sans', sans-serif;
}

a:hover{
  color: #40B2B1;
}

header{
  border-bottom: 3px solid #383e4b;
  color: #383E4B;
}

header a{
  color: #383E4B;
  text-decoration: none;
}

footer{
  background-color: #174A7F;
  color: #F4FAFE;
}

footer a{
  color: #f4fafe;
  text-decoration: none;
}

header ul{
  float: right;
  margin-top: 2rem;
}

header ul li, footer ul li{
  list-style-type: none;
}

.menu ul li{
  display: inline;
  padding: 20px;
}

header .logo{
  width: 100%;
  max-width: 100px;
  height: auto;
}

header .row{
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Blog Page */




/* Blog Post */

